syntax = 'proto3';

package character;

message GiveCharacterPayload {
    uint32 characterId = 1;
}