syntax = 'proto3';

package common;

/*
message Packet {
    int32 handlerId = 1;
    string userId = 2;
    string clientVersion = 3;
    int32 sequence = 4;
    bytes payload = 5;
}
*/

message Packet {
  uint32 handlerId = 1;      // 핸들러 ID (4바이트)
  string userId = 2;         // 유저 ID (UUID, 16바이트)
  string version = 3;  // 클라이언트 버전 (문자열)
  bytes payload = 4;         // 실제 데이터
}

message Ping {
  int64 timestamp = 1;
}