syntax = 'proto3';

package game;

message CreateGamePayload {
  int64 timestamp = 1;
}

message JoinGamePayload {
  string gameId = 1;
  int64 timestamp = 2;
}

message JoinLobbyPayload {
  uint32 characterId = 1;
}

message UpdateLocationPayload {
  float x = 1;
  float y = 2;
  bool isLobby = 3;
}

message MatchingPayload {
  string sessionID = 1;
}

message ReturnLobbyPayload {
  string message = 1;
}

message ExitGamePayload {
  string message = 1;
}

message EquipItemPayload {
  string itemId = 1;
}

message UnequipItemPayload {
  string itemId = 1;
}

message PurchaseEquipmentPayload {
  string name = 1;
  string price = 2;
  string sessionId = 3;
}

message ReselectCharacterPayload {
  string message = 1;
}