syntax = "proto3";

package ui;

message ChattingPayload {
  string message = 1;
  int32 type = 2;
  bool isLobby = 3;
}