syntax = 'proto3';

package user;

message RegisterPayload {
  string playerId = 1;
  string password = 2;
  string name = 3;
  int32 guild = 4;
}

message LoginPayload {
  string playerId = 1;
  string password = 2;
  float frame = 3;
}